css: Make sure z-index on elements makes sense

--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,7 @@ nav li a:hover {
   background-color: var(--headerbackground);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 99;
 }
 
 /* Style the links inside the dropdown */
@@ -777,7 +777,6 @@ input:checked + .slider {
 }
 
 .small-hidden-text {
-  z-index: 1000;
   color: transparent;
   font-size: 14px;
   position: absolute;
@@ -800,7 +799,7 @@ div.stores-select {
 
 img.hoverImage {
     position: absolute;
-    z-index: 3;
+    z-index: 99;
     width: auto;
     max-width: 640px;
     max-height: 360px;
